updated config files

--- a/config_files/LE/esg-le.ini
+++ b/config_files/LE/esg-le.ini
@@ -25,8 +25,8 @@ log_level = WARNING
 
 checksum = md5sum | MD5
 
-project_options = 
-	CCSM | Community Climate System Model | 1
+project_options =
+        CESM | Community Earth System Model | 2
 
 root_id_1 = ucar
 root_id_2 = cgd
@@ -38,41 +38,44 @@ thredds_aggregation_services =
         ISO | /thredds/iso | NCISOatNCAR | gridService
 thredds_authentication_realm = THREDDS Data Server
 thredds_catalog_basename = %(dataset_id)s.v%(version)s.xml
-thredds_dataset_roots = 
-	datazone | /datazone
-	datazone/cesm2 | /datazone/cesm2
-	datazone/campaign | /datazone/campaign
+thredds_dataset_roots =
+        datazone | /datazone
+        datazone/cesm2 | /datazone/cesm2
+        datazone/clivar_le | datazone/clivar_le
+        datazone/clm/CLM5 | datazone/clm/CLM5
+        datazone/clm/CLM4 | datazone/clm/CLM4
+        datazone/campaign | /datazone/campaign
         datazone/cesm2/Gettelman_ECS_paper | /datazone/cesm2/Gettelman_ECS_paper
         CCSM | /CCSM
-	home/s/strandwg/CCSM | /home/s/strandwg/CCSM
-	nersc/h/hteng/ccsm | /nersc/h/hteng/ccsm
-	home/a/ahu/csm | /home/a/ahu/csm
-	nersc/a/ahu/csm | /nersc/a/ahu/csm
-	nersc/mp9/adrianne/ccsm | /nersc/mp9/adrianne/ccsm
-	nersc/mp9/strandwg/CCSM/csm | /nersc/mp9/strandwg/CCSM/csm
-        home/buja/mss/CCSM | /home/buja/mss/CCSM
+        home/s/strandwg/CCSM | /home/s/strandwg/CCSM
+        nersc/h/hteng/ccsm | /nersc/h/hteng/ccsm
+        home/a/ahu/csm | /home/a/ahu/csm
+        nersc/a/ahu/csm | /nersc/a/ahu/csm
+        nersc/mp9/adrianne/ccsm | /nersc/mp9/adrianne/ccsm
+        nersc/mp9/strandwg/CCSM/csm | /nersc/mp9/strandwg/CCSM/csm
+		home/buja/mss/CCSM | /home/buja/mss/CCSM
         YEAGER | /YEAGER
-	glade | /glade
-	home/dlawren/csm | /home/dlawren/csm
-	home/dlawren | /home/dlawren/
-	home/oleson/CRUNCEP | /home/oleson/CRUNCEP/
-	TILMES/GEOS5 | /TILMES/GEOS5
-	TILMES/MERRA | /TILMES/MERRA
-	JMCCAA/csm | /JMCCAA/csm
-	SHIELDS/csm | /SHIELDS/csm
-	home/gokhan/csm | /home/gokhan/csm
-	home/bates/csm | /home/bates/csm
-	NJN01/OLD/cesm/cesm1.0/validation | /NJN01/OLD/cesm/cesm1.0/validation
-	home/dbailey/csm | /home/dbailey/csm
-	home/hannay/csm | /home/hannay/csm
+        glade | /glade
+        home/dlawren/csm | /home/dlawren/csm
+        home/dlawren | /home/dlawren/
+        home/oleson/CRUNCEP | /home/oleson/CRUNCEP/
+        TILMES/GEOS5 | /TILMES/GEOS5
+        TILMES/MERRA | /TILMES/MERRA
+        JMCCAA/csm | /JMCCAA/csm
+        SHIELDS/csm | /SHIELDS/csm
+        home/gokhan/csm | /home/gokhan/csm
+        home/bates/csm | /home/bates/csm
+        NJN01/OLD/cesm/cesm1.0/validation | /NJN01/OLD/cesm/cesm1.0/validation
+        home/dbailey/csm | /home/dbailey/csm
+        home/hannay/csm | /home/hannay/csm
         /AMPSRT | /AMPSRT
-	f2/ccsm/csm | /f2/ccsm/csm
-	f2/axhu/csm | /f2/axhu/csm
-	home/abaker | /home/abaker
-	MAI/csm | /MAI/csm
-	AHU/csm | /AHU/csm
-	datazone/esg/ccsm4/GEOS5 | /datazone/esg/ccsm4/GEOS5
-	datazone/esg/ccsm4/MERRA | /datazone/esg/ccsm4/MERRA
+        f2/ccsm/csm | /f2/ccsm/csm
+        f2/axhu/csm | /f2/axhu/csm
+        home/abaker | /home/abaker
+        MAI/csm | /MAI/csm
+        AHU/csm | /AHU/csm
+        datazone/esg/ccsm4/GEOS5 | /datazone/esg/ccsm4/GEOS5
+        datazone/esg/ccsm4/MERRA | /datazone/esg/ccsm4/MERRA
         home/marsh/waccmx | /home/marsh/waccmx
         home/tilmes/csm | /home/tilmes/csm
         home/lxia/csm | /home/lxia/csm
@@ -80,12 +83,14 @@ thredds_dataset_roots =
         home/mmills/csm | /home/mmills/csm
 thredds_error_pattern = Catalog reinit
 thredds_fatal_error_pattern = **Fatal
-thredds_file_services = 
-	GridFTP | gsiftp://vetsman.ucar.edu:2811 | GRIDFTPatNCAR | fileService
-	HTTPServer | /thredds/fileServer/ | TDSatNCAR | fileService
+thredds_file_services =
+        GridFTP | gsiftp://vetsman.ucar.edu:2811 | GRIDFTPatNCAR | fileService
+        HTTPServer | /thredds/fileServer/ | TDSatNCAR | fileService
 
 thredds_master_catalog_name = NCAR Earth System Grid catalog
 thredds_max_catalogs_per_directory = 500
+thredds_offline_services =
+        SRM | srm://sagearchiveprod.ucar.edu:49582/srm/v2/server?SFN=/sagearchiveprod.ucar.edu | HRMatNCAR
 
 thredds_username = NEED_TO_RETRIEVE_THIS_VALUE
 thredds_password = NEED_TO_RETRIEVE_THIS_VALUE
