update thredds_dataset_roots to avoid error output

--- a/config_files/LE/esg-le.ini
+++ b/config_files/LE/esg-le.ini
@@ -41,13 +41,17 @@ thredds_catalog_basename = %(dataset_id)s.v%(version)s.xml
 thredds_dataset_roots =
         datazone | /datazone
 	datazone/cesm2 | /datazone/cesm2
+	datazone/cesm2/CESM2.1_release | datazone/cesm2/CESM2.1_release
+	datazone/cesm2/ISSI_OSSE/data | datazone/cesm2/ISSI_OSSE/data
         datazone/clivar_le | datazone/clivar_le
         datazone/clm/CLM5 | datazone/clm/CLM5
         datazone/clm/CLM4 | datazone/clm/CLM4
+	datazone/clm/CLM4.5 | datazone/clm/CLM4.5
 	datazone/campaign | /datazone/campaign
         datazone/cesm2/Gettelman_ECS_paper | /datazone/cesm2/Gettelman_ECS_paper
         CCSM | /CCSM
 	home/s/strandwg/CCSM | /home/s/strandwg/CCSM
+	home/joemci/csm/ | home/joemci/csm/
 	nersc/h/hteng/ccsm | /nersc/h/hteng/ccsm
 	home/a/ahu/csm | /home/a/ahu/csm
 	nersc/a/ahu/csm | /nersc/a/ahu/csm
