update file locations and thredds dataset roots

--- a/config_files/esg-le.ini
+++ b/config_files/esg-le.ini
@@ -21,12 +21,12 @@ las_reinit_url = https://las.ucar.edu/las/ReInit.do
 las_root = /datazone/esg/datanode/vetsproc/las_conf/conf/server
 
 log_format = %(levelname)-10s %(asctime)s %(message)s
-log_level = WARNING
+log_level = DEBUG
 
 checksum = md5sum | MD5
 
-project_options =
-        CESM | Community Earth System Model | 2
+project_options = 
+	CESM | Community Earth System Model | 2
 
 root_id_1 = ucar
 root_id_2 = cgd
@@ -38,20 +38,21 @@ thredds_aggregation_services =
         ISO | /thredds/iso | NCISOatNCAR | gridService
 thredds_authentication_realm = THREDDS Data Server
 thredds_catalog_basename = %(dataset_id)s.v%(version)s.xml
-thredds_dataset_roots =
-        datazone | /datazone
+thredds_dataset_roots = 
+	datazone | /datazone
+        datazone/campaign/collections/amps | datazone/campaign/collections/amps
 	datazone/cesm2 | /datazone/cesm2
-	datazone/cesm2/CESM2.1_release | datazone/cesm2/CESM2.1_release
-	datazone/cesm2/ISSI_OSSE/data | datazone/cesm2/ISSI_OSSE/data
+        datazone/cesm2/CESM2.1_release | datazone/cesm2/CESM2.1_release
+        datazone/cesm2/ISSI_OSSE/data | datazone/cesm2/ISSI_OSSE/data
         datazone/clivar_le | datazone/clivar_le
         datazone/clm/CLM5 | datazone/clm/CLM5
         datazone/clm/CLM4 | datazone/clm/CLM4
-	datazone/clm/CLM4.5 | datazone/clm/CLM4.5
+        datazone/clm/CLM4.5 | datazone/clm/CLM4.5
 	datazone/campaign | /datazone/campaign
         datazone/cesm2/Gettelman_ECS_paper | /datazone/cesm2/Gettelman_ECS_paper
         CCSM | /CCSM
-	home/s/strandwg/CCSM | /home/s/strandwg/CCSM
 	home/joemci/csm/ | home/joemci/csm/
+        home/s/strandwg/CCSM | /home/s/strandwg/CCSM
 	nersc/h/hteng/ccsm | /nersc/h/hteng/ccsm
 	home/a/ahu/csm | /home/a/ahu/csm
 	nersc/a/ahu/csm | /nersc/a/ahu/csm
@@ -87,9 +88,9 @@ thredds_dataset_roots =
         home/mmills/csm | /home/mmills/csm
 thredds_error_pattern = Catalog reinit
 thredds_fatal_error_pattern = **Fatal
-thredds_file_services =
-        GridFTP | gsiftp://vetsman.ucar.edu:2811 | GRIDFTPatNCAR | fileService
-        HTTPServer | /thredds/fileServer/ | TDSatNCAR | fileService
+thredds_file_services = 
+	GridFTP | gsiftp://vetsman.ucar.edu:2811 | GRIDFTPatNCAR | fileService
+	HTTPServer | /thredds/fileServer/ | TDSatNCAR | fileService
 
 thredds_master_catalog_name = NCAR Earth System Grid catalog
 thredds_max_catalogs_per_directory = 500
