--- a/config_files/esg-le.ini
+++ b/config_files/esg-le.ini
@@ -39,7 +39,7 @@ thredds_aggregation_services =
 thredds_authentication_realm = THREDDS Data Server
 thredds_catalog_basename = %(dataset_id)s.v%(version)s.xml
 thredds_dataset_roots = 
-        datazone/campaign/collections/amps | datazone/campaign/collections/amps
+        datazone/<SPECIFIC_PATH> | /datazone/<SPECIFIC_PATH>  # Jason usually sets up a soft link here
 thredds_error_pattern = Catalog reinit
 thredds_fatal_error_pattern = **Fatal
 thredds_file_services = 
@@ -60,7 +60,7 @@ thredds_reinit_url = https://tds.ucar.edu/thredds/admin/debug?Catalogs/recheck
 
 thredds_restrict_access = User
 
-thredds_root = /shared/vetsman/tds-production-home/content/thredds/esgcet
+thredds_root = /glade/campaign/collections/cdg/catalogs/esgcet
 thredds_root_catalog_name = NCAR Earth System Root catalog
 thredds_url = https://tds.ucar.edu/thredds/catalog/esgcet
 
